--- a/app/views/item_stores/edit.html.erb
+++ b/app/views/item_stores/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @item %> |
-<%= link_to 'Back', items_path %>
+<%= link_to 'Show', @itemstore %> |
+<%= link_to 'Back', itemstores_path %>
