Suburbs datatable and bootstrap

--- a/app/views/suburbs/index.html.erb
+++ b/app/views/suburbs/index.html.erb
@@ -1,10 +1,9 @@
 <table id="suburbs-table", data-source="<%= suburbs_path(format: :json) %>">
   <thead>
     <tr>
-      <th>Suburb<th>
-      <th>State<th>
-      <th>Post Code<th>
-      <th colspan="3"></th>
+      <th>Suburb</th>
+      <th>State</th>
+      <th>Post Code</th>
     </tr>
   </thead>
   <tbody>
