ItemStore datatable working

--- a/app/views/item_stores/_form.html.erb
+++ b/app/views/item_stores/_form.html.erb
@@ -11,14 +11,24 @@
     </div>
   <% end %>
 
-  <div class="field">
+	<div class="field">
     <%= f.label :item_id %><br>
     <%= f.select :item_id, Item.all.collect { |i| [ i.description, i.id ] } %>
-   </div>
- 
- <div class="actions">
-    <%= f.submit %>
   </div>
+ 
+	<div class="field">
+		<%= f.label :store_id %><br>
+		<%= f.select :store_id, Store.all.collect { |s| [s.store_name, s.id ] } %>
+	</div>
+
+  <div class="field">
+		<%= f.label :price %><br>
+		<%= f.text_field :price %><br>
+  </div>
+
+	<div class="actions">
+    <%= f.submit %>
+	</div>
 
 
 <% end %>
