--- a/app/views/item_stores/edit.html.erb
+++ b/app/views/item_stores/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @itemstore %> |
-<%= link_to 'Back', itemstores_path %>
+<%= link_to 'Back', item_stores_path %>
