--- a/app/views/suburbs/_form.html.erb
+++ b/app/views/suburbs/_form.html.erb
@@ -12,13 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :suburb %><br>
-    <%= f.text_field :suburb %>
-  </div>
-
-  <div class="field">
-    <%= f.label :state %><br>
-    <%= f.text_field :state %>
+    <%= f.label :locality %><br>
+    <%= f.text_field :locality %>
   </div>
 
   <div class="field">
