--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,6 @@
  * file per style scope.
  *
  *= require_tree .
- *= require dataTables/jquery.dataTables
+ *= require jquery-ui
  *= require_self
  */
